# Pyqt

./: calculatorl.py  first_app.py  pyproject.toml
